# azure-percept-advanced-development

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
azureeyemodule/: Dockerfile.amd64  Dockerfile.arm64v8  README.md
azureeyemodule/app/: CMakeLists.txt  main.cpp  update_cvs_openvino.py
azureeyemodule/app/device/: device.cpp  device.hpp  validator.c  validator.h
azureeyemodule/app/imgcapture/: dataloop.cpp  dataloop.hpp
azureeyemodule/app/iot/: iot_interface.cpp  iot_interface.hpp  iot_update.cpp  iot_update.hpp
azureeyemodule/app/kernels/: binaryunet_kernels.hpp  classification_kernels.cpp  classification_kernels.hpp  ocr_kernels.hpp  openpose_kernels.cpp  openpose_kernels.hpp  s1_kernels.cpp  s1_kernels.hpp  ssd_kernels.cpp  ssd_kernels.hpp  yolo_kernels.cpp  yolo_kernels.hpp
azureeyemodule/app/model/: azureeyemodel.cpp  azureeyemodel.hpp  binaryunet.cpp  binaryunet.hpp  classification.cpp  classification.hpp  fasterrcnn.cpp  fasterrcnn.hpp  objectdetector.cpp  objectdetector.hpp  ocr.cpp  ocr.hpp  onnxssd.cpp  onnxssd.hpp  openpose.cpp  openpose.hpp  parser.cpp  parser.hpp  s1.cpp  s1.hpp  ssd.cpp  ssd.hpp  yolo.cpp  yolo.hpp
azureeyemodule/app/ocr/: decoder.cpp  decoder.hpp  ocrvis.cpp  ocrvis.hpp
azureeyemodule/app/openpose/: human_pose.cpp  human_pose.hpp  peak.cpp  peak.hpp
azureeyemodule/app/secure_ai/: secureai.cpp  secureai.hpp
azureeyemodule/app/streaming/: framebuffer.cpp  framebuffer.hpp  resolution.cpp  resolution.hpp  rtsp.cpp  rtsp.hpp
azureeyemodule/app/util/: circular_buffer.hpp  helper.cpp  helper.hpp  json.cpp  json.hpp  labels.cpp  labels.hpp  time_aligned_buffer.cpp  time_aligned_buffer.hpp  timing.cpp  timing.hpp
azureeyemodule/rpm/: glib2-2.56.4-8.el8.aarch64.rpm  glib2-2.56.4-8.el8.x86_64.rpm  gnutls-3.6.8-11.el8_2.x86_64.rpm  gsettings-desktop-schemas-3.32.0-4.el8.x86_64.rpm  gstreamer1-1.14.0-3.el8.aarch64.rpm  gstreamer1-1.14.0-3.el8.x86_64.rpm  gstreamer1-devel-1.14.0-3.el8.aarch64.rpm  gstreamer1-devel-1.14.0-3.el8.x86_64.rpm  gstreamer1-plugins-bad-free-1.14.0-5.el8.aarch64.rpm  gstreamer1-plugins-base-devel-1.14.0-4.el8.aarch64.rpm  gstreamer1-plugins-base-devel-1.14.0-4.el8.x86_64.rpm  gstreamer1-rtsp-server-1.14.0-1.fc28.aarch64.rpm  gstreamer1-rtsp-server-1.14.0-1.fc28.x86_64.rpm  gstreamer1-rtsp-server-devel-1.14.0-1.fc28.aarch64.rpm  gstreamer1-rtsp-server-devel-1.14.0-1.fc28.x86_64.rpm  hwdata-0.314-8.4.el8.noarch.rpm  libcroco-0.6.12-4.el8.aarch64.rpm  libsoup-2.62.3-1.el8.x86_64.rpm  libwebp-1.0.0-1.el8.aarch64.rpm  libwebp-1.0.0-1.el8.x86_64.rpm  soundtouch-2.0.0-2.el8.aarch64.rpm  soundtouch-2.0.0-2.el8.x86_64.rpm
azureeyemodule/sczpy/: sczpy-0.0.7-py3-none-any.whl
azureeyemodule/yum.repos.d/: CentOS-8-AppStream.repo  CentOS-8-Base.repo
default-configuration/: README.md  default-deployment-2108.json  default-deployment-2112.json
machine-learning-notebooks/: README.md
machine-learning-notebooks/train-from-scratch/: .amlignore  .gitignore  DATA_LICENSE  Dockerfile  README.md  SemanticSegmentationUNet.ipynb  dice_loss.py  run-train.py  train-env.yml  train.py
machine-learning-notebooks/train-from-scratch/utils/: dataset.py
machine-learning-notebooks/transfer-learning/: transfer-learning-cloud.md  transfer-learning-local.md  transfer-learning-using-ssd.ipynb
machine-learning-notebooks/transfer-learning-custom-azureml/: .gitignore  1.Collect_Image_Data_from_PerceptDK.ipynb  2.Upload_and_Label_with_AzureML.ipynb  3.Train_with_AzureML.ipynb  4.Convert_to_OpenVINO.ipynb  5.Deploy_to_PerceptDK.ipynb  readme.md  requirements.txt  troubleshooting.md
machine-learning-notebooks/transfer-learning-custom-azureml/camera/: __init__.py  capture_camera.py
machine-learning-notebooks/transfer-learning-custom-azureml/datasets/: __init__.py  dataset.py
machine-learning-notebooks/transfer-learning-custom-azureml/docker/: TFObjectDetectionAPI.dockerfile
mock-eye-module/: CMakeLists.txt  Dockerfile  README.md  main.cpp
mock-eye-module/kernels/: fasterrcnn_kernels.hpp  openpose_kernels.cpp  openpose_kernels.hpp  ssd_kernels.cpp  ssd_kernels.hpp  utils.cpp  utils.hpp  yolo_kernels.cpp  yolo_kernels.hpp
mock-eye-module/modules/: device.cpp  device.hpp  parser.cpp  parser.hpp
mock-eye-module/modules/objectdetection/: faster_rcnn.cpp  faster_rcnn.hpp  object_detectors.cpp  object_detectors.hpp
mock-eye-module/modules/openpose/: human_pose.cpp  human_pose.hpp  peak.cpp  peak.hpp  pose_estimators.cpp  pose_estimators.hpp  util.hpp
mock-eye-module/scripts/: compile.ps1  compile.sh  compile_and_test.ps1  compile_and_test.sh
onvif/: README.md  deployment.json
scripts/: compile_ir.ps1  compile_ir.sh  prepare_device.ps1  prepare_device.sh  run_workbench.ps1
secured_locker/: README.md  protection-at-rest.md  protection-in-transit.md  protection-in-use.md  provision-a-secured-locker.md  secured-locker-overview.md  server-topology.md
secured_locker/azure-functions/: README.md  assign_storage_role.ps1
secured_locker/azureeyemodule-integration/: README.md  azureeyemodule-integration.ipynb
secured_locker/deployment/: azuredeploy.json  azuredeploy.parameters.json  certdeploy.json  certdeploy.parameters.json  config_certificate.ps1  device_identity.ps1
secured_locker/jupyter-basics/: README.md  model.txt  sczpy-basics.ipynb
secured_locker/python-program/: README.md  app.py  model.txt
secured_locker/python-retrain/: README.md  app.py  dummy_data.txt  prometheus.yml  requirements.txt
tutorials/: README.md
tutorials/banana-unet-tutorial/: banana-unet-tutorial.md
tutorials/openvino-zoo-tutorial/: openvino-model-zoo-tutorial.md
tutorials/pytorch-from-scratch-tutorial/: .amlignore  PyTorchModelFromScratch.ipynb  pytorch-from-scratch-tutorial.md  requirements.txt  train.py
(+4 files in other folders)
